exports[`test Should show the chaos area 1`] = `
<g>
  <rect
    className="area js-area-standard"
    height="800"
    id="chaos"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style="{this.state.style}"
    width="800" />
  <text
    className="area-label"
    id="label-choas"
    text-anchor="middle"
    x="400"
    y="50">
    chaos
  </text>
</g>
------------HTML PREVIEW---------------
<g>
  <rect
    class="area js-area-standard"
    height="800"
    id="chaos"
    style="{this.state.style}"
    width="800"
  >
  </rect>
  <text
    class="area-label"
    id="label-choas"
    text-anchor="middle"
    x="400"
    y="50"
  >
    chaos
  </text>
</g>
`;

exports[`test Should show the chaos area 2`] = `
<g>
  <rect
    className="area js-area-standard"
    height="800"
    id="chaos"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style="{this.state.style}"
    width="800" />
  <text
    className="area-label"
    id="label-choas"
    text-anchor="middle"
    x="400"
    y="50">
    chaos
  </text>
</g>
------------HTML PREVIEW---------------
<g>
  <rect
    class="area js-area-standard"
    height="800"
    id="chaos"
    style="{this.state.style}"
    width="800"
  >
  </rect>
  <text
    class="area-label"
    id="label-choas"
    text-anchor="middle"
    x="400"
    y="50"
  >
    chaos
  </text>
</g>
`;

exports[`test Should show the chaos area 3`] = `
<g>
  <rect
    className="area js-area-standard"
    height="800"
    id="chaos"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style="{this.state.style}"
    width="800" />
  <text
    className="area-label"
    id="label-choas"
    text-anchor="middle"
    x="400"
    y="50">
    chaos
  </text>
</g>
------------HTML PREVIEW---------------
<g>
  <rect
    class="area js-area-standard"
    height="800"
    id="chaos"
    style="{this.state.style}"
    width="800"
  >
  </rect>
  <text
    class="area-label"
    id="label-choas"
    text-anchor="middle"
    x="400"
    y="50"
  >
    chaos
  </text>
</g>
`;

exports[`test Should show the comfort area 1`] = `
<svg
  height="800"
  id="stage"
  width="800">
  <g>
    <circle
      className="area js-area-standard"
      cx="400"
      cy="400"
      id="comfort"
      r="97.516770592797"
      style="{this.state.style}" />
    <text
      className="area-label"
      id="label-comfort"
      text-anchor="middle"
      x="400"
      y="400">
      comfort
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="800"
  id="stage"
  width="800"
>
  <g>
    <circle
      class="area js-area-standard"
      cx="400"
      cy="400"
      id="comfort"
      r="97.516770592797"
      style="{this.state.style}"
    >
    </circle>
    <text
      class="area-label"
      id="label-comfort"
      text-anchor="middle"
      x="400"
      y="400"
    >
      comfort
    </text>
  </g>
</svg>
`;

exports[`test Should show the comfort model 1`] = `
<svg
  height="800"
  id="stage"
  width="800">
  <g>
    <rect
      className="area js-area-standard"
      height="800"
      id="chaos"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style="{this.state.style}"
      width="800" />
    <text
      className="area-label"
      id="label-choas"
      text-anchor="middle"
      x="400"
      y="50">
      chaos
    </text>
  </g>
  <g
    id="zones">
    <g>
      <circle
        className="area js-area-standard"
        cx="400"
        cy="400"
        id="stretch"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        r="300.12599083141845"
        style="{this.state.style}" />
      <text
        className="area-label"
        id="label-stretch"
        text-anchor="middle"
        x="400"
        y="200">
        stretch
      </text>
    </g>
    <g>
      <circle
        className="area js-area-standard"
        cx="400"
        cy="400"
        id="comfort"
        r="97.516770592797"
        style="{this.state.style}" />
      <text
        className="area-label"
        id="label-comfort"
        text-anchor="middle"
        x="400"
        y="400">
        comfort
      </text>
    </g>
  </g>
  <g
    id="history" />
  <rect
    fill-opacity="0.0"
    height="800"
    id="clickable"
    width="800" />
</svg>
------------HTML PREVIEW---------------
<svg
  height="800"
  id="stage"
  width="800"
>
  <g>
    <rect
      class="area js-area-standard"
      height="800"
      id="chaos"
      style="{this.state.style}"
      width="800"
    >
    </rect>
    <text
      class="area-label"
      id="label-choas"
      text-anchor="middle"
      x="400"
      y="50"
    >
      chaos
    </text>
  </g>
  <g id="zones">
    <g>
      <circle
        class="area js-area-standard"
        cx="400"
        cy="400"
        id="stretch"
        r="300.12599083141845"
        style="{this.state.style}"
      >
      </circle>
      <text
        class="area-label"
        id="label-stretch"
        text-anchor="middle"
        x="400"
        y="200"
      >
        stretch
      </text>
    </g>
    <g>
      <circle
        class="area js-area-standard"
        cx="400"
        cy="400"
        id="comfort"
        r="97.516770592797"
        style="{this.state.style}"
      >
      </circle>
      <text
        class="area-label"
        id="label-comfort"
        text-anchor="middle"
        x="400"
        y="400"
      >
        comfort
      </text>
    </g>
  </g>
  <g id="history"></g>
  <rect
    fill-opacity="0.0"
    height="800"
    id="clickable"
    width="800"
  >
  </rect>
</svg>
`;

exports[`test Should show the stretch area 1`] = `
<svg
  height="800"
  id="stage"
  width="800">
  <g>
    <circle
      className="area js-area-standard"
      cx="400"
      cy="400"
      id="stretch"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="300.12599083141845"
      style="{this.state.style}" />
    <text
      className="area-label"
      id="label-stretch"
      text-anchor="middle"
      x="400"
      y="200">
      stretch
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="800"
  id="stage"
  width="800"
>
  <g>
    <circle
      class="area js-area-standard"
      cx="400"
      cy="400"
      id="stretch"
      r="300.12599083141845"
      style="{this.state.style}"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      text-anchor="middle"
      x="400"
      y="200"
    >
      stretch
    </text>
  </g>
</svg>
`;
